# quake2c

./: .gitignore  README.md  g_file.h  g_main.c  g_save.c  g_save.h  g_thread.cpp  g_thread.h  g_time.cpp  g_time.h  game.h  gamex86.sln  gamex86.vcxproj  gamex86.vcxproj.filters  meson.build  meson_options.txt  vm.c  vm.h  vm_debug.c  vm_debug.h  vm_ext.c  vm_file.c  vm_file.h  vm_game.c  vm_gi.c  vm_gi.h  vm_hash.c  vm_hash.h  vm_heap.c  vm_heap.h  vm_list.c  vm_list.h  vm_math.c  vm_mem.c  vm_mem.h  vm_opcodes.c.h  vm_opcodes.h  vm_string.c  vm_string_list.c  vm_structlist.c  (+1 more)
shared/: api.h  entity.h  platform.h  shared.c  shared.h
src/: g_file.cpp  g_main.c  g_main.cpp  g_main.h  g_save.c  g_thread.cpp  g_thread.h  g_vm.c  g_vm.cpp  g_vm.h  game.h  vm.c  vm.h  vm_debug.c  vm_debug.cpp  vm_debug.h  vm_ext.c  vm_ext.cpp  vm_ext.h  vm_file.c  vm_game.c  vm_game.cpp  vm_game.h  vm_gi.c  vm_gi.cpp  vm_hash.h  vm_math.c  vm_math.cpp  vm_math.h  vm_mem.c  vm_mem.cpp  vm_opcodes.c  vm_opcodes.cpp  vm_opcodes.h  vm_string.c  vm_string.cpp  vm_string.h  vm_string_list.c  vm_vector.cpp
src/shared/: api.h  client.h  entity.h  platform.h  shared.c  shared.cpp  shared.h
src/windows/: unistd.h
